--- a/Index.html
+++ b/Index.html
@@ -1,30 +1,62 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mozza Bar</title>
+    <link rel="icon" href="Imagenes/Mozza-Bar-Logo.png">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
 
-<header>
+    <header>
     <div class="logo">
-        <img src="Imagenes/Mozza-Bar-Logo.png" alt="Logo">
-      </div>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Concepto</a></li>
-      <li><a href="#">Fotos</a></li>
-      <li><a href="#">Menu</a></li>
-      <li><a href="#">Reservas</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Contacto</a></li>
-    </ul>
-  </nav>
-</header>
+        <a href="https://www.ejemplo.com">
+            <img src="Imagenes/Mozza-Bar-Logo.png" alt="Logo">
+        </a>
+    </div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Concepto</a></li>
+                <li><a href="#">Fotos</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Reservas</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="foto-restaurante">
+        <img src="Imagenes/osteria_mozza_singapore.jpg" alt="Foto de restaurante">
+        <div class="texto">
+            <h2>Welcome</h2>
+            <h1>MOZZA BAR</h1>
+            <h3>We're open</h3>
+        </div>
+    </div>
+    <div class="foto-plantas">
+        <img src="Imagenes/imagen-plantas.jpg" alt="imagen de plantas">
+        <div class="texto-concepto">
+            <h2 class="texto-h2">CONCEPTO</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi aliquam consectetur nesciunt est repellendus, facere rerum doloremque nemo minus, voluptate ipsam voluptatum esse possimus quisquam ab fugit quaerat facilis magni.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, quos. Vero impedit iusto magnam. Sed minus facilis consectetur, mollitia magni, repudiandae corrupti corporis architecto commodi voluptates inventore soluta molestias odit.</p>
+        </div>
+        <div class="border-left">
+            <img src="Imagenes/TazaDeCafe.png" alt="Taza de cafe">
 
-<div class="content">
-  <!-- Aquí va el contenido de la página -->
+        </div>
+        <div class="border-right">
+            <img src="Imagenes/pizza.png" alt="">
+
+        </div>
+    </div>
+<div class="grid">
+    <img src="Imagenes/FondoGrid.jpg" alt="Fondo del grid">
 </div>
 
-</body>
+
+
 </html>
