feat(html/css): "nuevos cambios, codivo responsive"

--- a/Index.html
+++ b/Index.html
@@ -11,12 +11,14 @@
 
 <body>
 
+    <!---HEADER-->
+
     <header>
-    <div class="logo">
-        <a href="https://www.ejemplo.com">
-            <img src="Imagenes/Mozza-Bar-Logo.png" alt="Logo">
-        </a>
-    </div>
+        <div class="logo">
+            <a href="https://www.ejemplo.com">
+                <img src="Imagenes/Mozza-Bar-Logo.png" alt="Logo">
+            </a>
+        </div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -29,33 +31,70 @@
             </ul>
         </nav>
     </header>
-    <div class="foto-restaurante">
-        <img src="Imagenes/osteria_mozza_singapore.jpg" alt="Foto de restaurante">
-        <div class="texto">
-            <h2>Welcome</h2>
-            <h1>MOZZA BAR</h1>
-            <h3>We're open</h3>
-        </div>
-    </div>
-    <div class="foto-plantas">
-        <img src="Imagenes/imagen-plantas.jpg" alt="imagen de plantas">
-        <div class="texto-concepto">
-            <h2 class="texto-h2">CONCEPTO</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi aliquam consectetur nesciunt est repellendus, facere rerum doloremque nemo minus, voluptate ipsam voluptatum esse possimus quisquam ab fugit quaerat facilis magni.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, quos. Vero impedit iusto magnam. Sed minus facilis consectetur, mollitia magni, repudiandae corrupti corporis architecto commodi voluptates inventore soluta molestias odit.</p>
-        </div>
-        <div class="border-left">
-            <img src="Imagenes/TazaDeCafe.png" alt="Taza de cafe">
 
-        </div>
-        <div class="border-right">
-            <img src="Imagenes/pizza.png" alt="">
+    <!--COVER-->
 
-        </div>
-    </div>
-<div class="grid">
-    <img src="Imagenes/FondoGrid.jpg" alt="Fondo del grid">
-</div>
+    <main>
+        <article class="foto-restaurante">
+            <img src="Imagenes/osteria_mozza_singapore.jpg" alt="Foto de restaurante">
+            <div class="texto">
+                <h2>Welcome</h2>
+                <h1> <span class="mozza">MOZZA</span> BAR</h1>
+                <h3>We're open</h3>
+            </div>
+        </article>
+
+        <!--INFO-->
+
+        <article class="foto-plantas">
+            <img src="Imagenes/imagen-plantas.jpg" alt="imagen de plantas">
+            <div class="texto-concepto">
+                <h2 class="texto-h2">CONCEPTO</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi aliquam consectetur nesciunt est
+                    repellendus, facere rerum doloremque nemo minus, voluptate ipsam voluptatum esse possimus
+                    quisquam ab fugit quaerat facilis magni.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, quos. Vero impedit iusto
+                    magnam. Sed minus facilis consectetur, mollitia magni, repudiandae corrupti corporis architecto
+                    commodi voluptates inventore soluta molestias odit.</p>
+            </div>
+            <div class="border-left">
+                <img src="Imagenes/TazaDeCafe.png" alt="Taza de cafe">
+
+            </div>
+            <div class="border-right">
+                <img src="Imagenes/pizza.png" alt="">
+
+            </div>
+        </article>
+
+        <!--GRID-->
+
+        <article class="grid-fondo">
+            <img src="Imagenes/galeria.jpg" alt="grid">
+            
+            <div class="galeria1">
+                <img src="Imagenes/gatoLenguaAfuera.jpg" alt="Gato negro">
+            </div>
+            <div class="galeria2">
+                <img src="Imagenes/gatoheterocromia.jpg" alt="Gato asombrado">
+            </div>
+            <div class="galeria3">
+                <img src="Imagenes/gatogris.jpg" alt="gato gris">
+            </div>
+            <div class="galeria4">
+                <img src="Imagenes/GatoGafas.jpg" alt="gato gafas">
+            </div>
+            <div class="galeria5">
+                <img src="Imagenes/gatoFondoNaranja.jpg" alt="Gato con ojos de dos colores">
+            </div>
+            <div class="galeria6">
+                <img src="Imagenes/gatoasombrado.jpg" alt="Gato con fondo naranja">
+            </div>
+        
+        </article>
+
+
+    </main>
 
 
 
