feat(html/css): "cambios en la galeria de las fotos. Menu

--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
 
         <article class="grid-fondo">
             <img src="Imagenes/galeria.jpg" alt="grid">
-            
+
             <div class="galeria1">
                 <img src="Imagenes/gatoLenguaAfuera.jpg" alt="Gato negro">
             </div>
@@ -79,23 +79,36 @@
                 <img src="Imagenes/gatoheterocromia.jpg" alt="Gato asombrado">
             </div>
             <div class="galeria3">
-                <img src="Imagenes/gatogris.jpg" alt="gato gris">
+                <img src="Imagenes/gatoFondoNaranja.jpg" alt="gato gris">
             </div>
             <div class="galeria4">
                 <img src="Imagenes/GatoGafas.jpg" alt="gato gafas">
             </div>
             <div class="galeria5">
-                <img src="Imagenes/gatoFondoNaranja.jpg" alt="Gato con ojos de dos colores">
+                <img src="Imagenes/gatoasombrado.jpg" alt="Gato con ojos de dos colores">
             </div>
             <div class="galeria6">
-                <img src="Imagenes/gatoasombrado.jpg" alt="Gato con fondo naranja">
+                <img src="Imagenes/gatogris.jpg" alt="Gato con fondo naranja">
             </div>
-        
         </article>
+
+        <!--CARTA-->
+
+        <section>
+            <h3 class="catalogo">CARTA</h3>
+
+            <div class="menu">
+                <ul>
+                    <li><a href="#desayuno">Desayuno</a></li>
+                    <li><a href="#carta">Carta</a></li>
+                    <li><a href="#cocktails">Cocktails</a></li>
+                </ul>
+            </div>
+        </section>
 
 
     </main>
 
-
+</body>
 
 </html>
