--- a/Index.html
+++ b/Index.html
@@ -104,6 +104,10 @@
                     <li><a href="#cocktails">Cocktails</a></li>
                 </ul>
             </div>
+
+            <div class="carta">
+                
+            </div>
         </section>
 
 
