Elaboración de menu y boton de menu

--- a/Index.html
+++ b/Index.html
@@ -105,8 +105,187 @@
                 </ul>
             </div>
 
-            <div class="carta">
-                
+            <div class="fondo-carta">
+                <div class="rectangulo izquierdo">
+                    <h2>Título Izquierdo</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto 1</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 2</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 3</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+
+                    <h2>Título Izquierdo</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto 1</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 2</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 3</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+
+                    <h2>Título Izquierdo</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto 1</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 2</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 3</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+
+                    <h2>Título Izquierdo</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto 1</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 2</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 3</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+                    <h2>Título Izquierdo</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto 1</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 2</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto 3</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+
+
+                </div>
+                <img src="Imagenes/FondoMenujpg.jpg" alt="fondo para el menu">
+                <div class="rectangulo derecho">
+                    <h2>Título Derecho</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto A</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto B</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto C</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+
+                    <h2>Título Derecho</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto A</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto B</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto C</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+
+                    <h2>Título Derecho</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto A</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto B</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto C</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+
+                    <h2>Título Derecho</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto A</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto B</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto C</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+
+                    <h2>Título Derecho</h2>
+                    <table class="tabla-productos">
+                        <tr>
+                            <td>Producto A</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto B</td>
+                            <td class="precio">10</td>
+                        </tr>
+                        <tr>
+                            <td>Producto C</td>
+                            <td class="precio">10</td>
+                        </tr>
+
+                    </table>
+
+
+                </div>
+            </div>
+
+            <div class="contenedor">
+                <input type="button" class="boton" value="Ver la carta de desayunos">
             </div>
         </section>
 
